# jeeves

./: .gitignore  Taskfile.yml  pyproject.toml
src/: commands.py  jeeves.py
