[tool.poetry]
name = "jeeves"
version = "0.0.1"
description = ""
authors = ["Seth Curry <seth@scurry.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
whisper = "^1.1.10"
speechrecognition = "^3.10.0"
gpt4all = "^2.0.2"
pyaudio = "^0.2.14"
pyttsx3 = "^2.90"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
